# rust-hello-world

./: Cargo.toml  README.md
examples/: channels.rs  client.rs  metrics.rs  u256_decimal.rs
src/: batch_futures.rs  closures.rs  common_collections.rs  generics.rs  lib.rs  lifetime.rs  main.rs  shows.rs  slices.rs
src/batch_futures/: batch.rs  example.rs  oneshot_eg.rs
src/closures/: giveaway.rs
src/generics/: largest.rs
src/shows/: bar.rs  foo.rs  status.rs
src/tokio_stuff/: server.rs
