[package]
name = "rust-hello-world"
version = "0.1.0"
edition = "2021"
default-run = "main"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/tokio_stuff/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
derive_more = "0.99.17"
eyre = "0.6.9"
futures = { version = "0.3.29", features = ["thread-pool"] }
mini-redis = "0.4.1"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
bytes = "1"
tokio-metrics = "0.3.1"

